# mangrove

./: LICENSE  README.md  install.sh  pyproject.toml
src/bilibili/: __init__.py  extensions.py  utils.py
src/bilibili/blueprint/: auth.py  video.py
src/core/: __init__.py  commands.py  config.py  env.py  flask.py  httpx.py  huey.py  redis.py
src/mangrove/: __init__.py  __main__.py  dev.py  extensions.py  huey.py  wsgi.py
src/mangrove/blueprint/: bing.py  cpolar.py  demo1.py  demo2.py  demo3.py  demo4.py  test.py
src/mangrove/subapp/: __init__.py
src/mangrove/subapp/subapp2/: __init__.py
src/slab/: __main__.py  curseforge.py  dev.py  echo_args.py  gen_commands.py  password.py  start.py
src/utils/: __init__.py  getter.py
src/youtube/: __init__.py  extensions.py  task.py
src/youtube/blueprint/: channel.py  playlist.py  video.py
tests/: test_youtube.py
tests/bilibili/: test_api.py
tests/core/: test_flask.py  test_httpx.py  test_redis.py
tests/mangrove/: conftest.py  test_flask.py  test_httpx.py  test_redis.py
tests/utils/: test_getter.py
