[project]
name = "mangrove"
version = "1.0.0"
description = ""
authors = [
    {name = "nia", email = "mangrove0720@outlook.com"},
]
dependencies = ["flask==3.1.0", "httpx==0.28.1", "redis==5.2.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest==8.3.4",
]
